Fix a bug on updating and deleting entities with composite keys